background tile and correcting residual layout issues

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -207,14 +207,6 @@ TYPOGRAPHY: RESUME
 .resume {
   color: white;
   text-align: left; }
-  .resume h2 {
-    position: relative;
-    top: 460px;
-    left: 30px; }
-  .resume p {
-    position: relative;
-    top: 410px;
-    left: 240px; }
 
 /*******************************
 TYPOGRAPHY: RESUME
@@ -289,19 +281,22 @@ LAYOUT STYLES
 
 .primary-content,
 .secondary-content {
-  margin: auto;
-  max-width: 960px;
   padding-bottom: 70px; }
 
 .primary-content {
+  max-width: 960px;
+  margin: auto;
   padding: 0 100px 50px 100px;
   width: 70%; }
 
 .secondary-content {
-  padding-bottom: 70px; }
+  padding: 70px 0; }
+  .secondary-content.resume {
+    background-color: #fafafa; }
 
-.resume {
-  border-radius: 10px; }
+.section-content-margin {
+  margin: auto;
+  max-width: 1000px; }
 
 /*******************************
 MEDIA QUERIES
