--- a/app/scss/color-palatte.scss
+++ b/app/scss/color-palatte.scss
@@ -25,3 +25,5 @@ GREYS
 $dark-grey: rgba(107, 107, 107, 1);
 $medium-grey: rgba(155, 155, 155, 1);
 $light-grey: rgba(211, 211, 211, 1);
+
+$background-grey: #fafafa;
