--- a/app/scss/homepage.scss
+++ b/app/scss/homepage.scss
@@ -8,22 +8,27 @@ LAYOUT STYLES
 
 .primary-content,
 .secondary-content {
-	margin: auto;
-	max-width: 960px;
 	padding-bottom: 70px;
 }
 
 .primary-content {
+	max-width: 960px;
+	margin: auto;
 	padding: 0 100px 50px 100px;
 	width: 70%;
 }
 
 .secondary-content {
-	padding-bottom: 70px;
+	padding: 70px 0;
+
+	&.resume {
+		background-color: $background-grey;
+	}
 }
 
-.resume {
-	border-radius: 10px;
+.section-content-margin {
+	margin: auto;
+	max-width: 1000px;
 }
 
 
