--- a/app/scss/typography.scss
+++ b/app/scss/typography.scss
@@ -150,18 +150,6 @@ TYPOGRAPHY: RESUME
 .resume {
   color: white;
   text-align: left;
-
-  h2 {
-    position: relative;
-    top: 460px;
-    left: 30px;
-  }
-
-  p {
-    position: relative;
-    top: 410px;
-    left: 240px;
-  }
 }
 
 
